# kurteyt-url

./: .env.dev  .env.prd  .gitignore  .pydocstyle  Dockerfile  README.md  docker-compose.prd.yml  docker-compose.yml  package-lock.json  package.json  pylintrc  pyproject.toml  serverless.yml  tags.yml
.github/workflows/: dev.yml  prd.yml
admin/: remove_lambda_versions.py  truncate_table.py
docker/: .env.dev  .env.prd
dox/: get-service-token.py  iam-policy.json
dox/edge/: viewer-request.input.json
infra/: cloudfront.yaml  domain.yaml  outputs.yaml  table.yaml
module-app/: requirements.txt
module-app/app/: main.py
module-app/app/api/: deps.py
module-app/app/api/api_v1/: api.py
module-app/app/api/api_v1/endpoints/: shorturl.py
module-app/app/core/: logger.py  parameters.py  responses.py  security.py  settings.py  util.py
module-app/app/crud/: __init__.py  base.py  crud_shorturl.py
module-app/app/database/: __init__.py  dynamodb.py  pagination.py  util.py
module-app/app/exceptions/: __init__.py  base.py  database.py  security.py  users.py
module-app/app/models/: __init__.py  shorturl.py  user.py
module-edge/: requirements.txt
module-edge/edge/: logger.py  main.py  util.py
