[tool.poetry]
name = "kurteyt-url"
version = "0.1.0"
description = ""
authors = ["dwbelliston <dustinbelliston@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
mangum = "^0.10.0"
python-jose = "^3.2.0"
requests = "^2.24.0"
boto3 = "^1.14.38"
email-validator = "^1.1.1"
# aws_xray_sdk = "^2.6.0"

[tool.poetry.dev-dependencies]
uvicorn = "^0.11.6"
autopep8 = "^1.5.3"
debugpy = "^1.0.0-rc.2"
black = "^20.8b1"
pylint = "^2.6.0"
pydocstyle = "^5.1.1"

[tool.isort]
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
