[tool.poetry]
name = "kurteyt-url"
version = "0.1.0"
description = ""
authors = ["dwbelliston <dustinbelliston@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
mangum = "^0.17.0"
python-jose = "^3.3.0"
requests = "^2.32.3"
boto3 = "^1.34.0"
pydantic-settings = "^2.5.2"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.30.0"
autopep8 = "^1.5.3"
debugpy = "^1.0.0"
black = "^20.8b1"
pylint = "^2.6.0"
pydocstyle = "^5.1.1"

[tool.isort]
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
